--- a/portfolio.html
+++ b/portfolio.html
@@ -59,19 +59,19 @@
         <h1 class="visually-hidden">Навигация</h1>
               <ul class="filter-nav">
               <li class="filter-item">
-              <button type="portfolio-button">Все</button>
+              <button type="button">Все</button>
             </li>
             <li class="filter-item">
-              <button type="portfolio-button">Веб-сайты</button>
+              <button type="button">Веб-сайты</button>
             </li>
             <li class="filter-item">
-              <button type="portfolio-button">Приложения</button>
+              <button type="button">Приложения</button>
             </li>
             <li class="filter-item">
-              <button type="portfolio-button">Дизайн</button>
+              <button type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button type="portfolio-button">Маркетинг</button>
+              <button type="button">Маркетинг</button>
             </li>
                   </ul>
           </div>
