--- a/portfolio.html
+++ b/portfolio.html
@@ -57,19 +57,19 @@
           <h1 class="visually-hidden">Навигация</h1>
           <ul class="filter-nav">
             <li class="filter-item">
-              <button class="portfolio-btn" type="button">Все</button>
+              <button class="button portfolio-btn" type="button">Все</button>
             </li>
             <li class="filter-item">
-              <button class="portfolio-btn" type="button">Веб-сайты</button>
+              <button class="button portfolio-btn" type="button">Веб-сайты</button>
             </li>
             <li class="filter-item">
-              <button class="portfolio-btn" type="button">Приложения</button>
+              <button class="button portfolio-btn" type="button">Приложения</button>
             </li>
             <li class="filter-item">
-              <button class="portfolio-btn" type="button">Дизайн</button>
+              <button class="button portfolio-btn" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button class="portfolio-btn" type="button">Маркетинг</button>
+              <button class="button portfolio-btn" type="button">Маркетинг</button>
             </li>
           </ul>
 
